# terramate-mcp-server

./: .dockerignore  .gitignore  .golangci.yaml  .golangci.yml  .pre-commit-config.yaml  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  env.example  go.mod  go.sum  pyproject.toml  server.py
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml  test.yml
cmd/terramate-mcp-server/: main.go  server.go  server_test.go
internal/toolsdeps/: tools.go
internal/version/: version.go
sdk/terramate/: README.md  client.go  client_refresh_test.go  client_retry_test.go  client_test.go  credential.go  credential_refresh_test.go  credential_test.go  credential_unix.go  credential_windows.go  deployments.go  deployments_test.go  drifts.go  drifts_test.go  errors.go  errors_test.go  memberships.go  memberships_test.go  previews.go  previews_test.go  resources.go  resources_test.go  reviewrequests.go  reviewrequests_test.go  stacks.go  stacks_test.go  types.go  types_test.go
terramate_mcp/: __init__.py  config.py  mcp_instance.py
terramate_mcp/http/: __init__.py  client.py
terramate_mcp/tools/: __init__.py  alerts.py  dashboard.py  deployments.py  discover.py  drifts.py  logs.py  organizations.py  resources.py  review_requests.py  stacks.py  workflows.py
terramate_mcp/utils/: commands.py  formatting.py  types.py
tools/: handlers.go  handlers_test.go
tools/internal/: types.go
tools/tmc/: auth.go  auth_test.go  deployments.go  deployments_test.go  drifts.go  drifts_test.go  previews.go  stacks.go  (+6 more)
